out.log
   Compiling quickscript v0.5.5 (/workspaces/QuickScript)
error[E0599]: no variant or associated item named `Gt` found for enum `Operator` in the current scope
  --> src/ast/var.rs:89:71
   |
89 | ...                   if let Some(TokenData::Operator(Operator::Gt)) = tokens.peek_at(1).map(|t| &t.content) {
   |                                                                 ^^ variant or associated item not found in `Operator`
   |
  ::: src/tokenizer/operator.rs:2:1
   |
2  | pub enum Operator {
   | ----------------- variant or associated item `Gt` not found for this enum

For more information about this error, try `rustc --explain E0599`.
error: could not compile `quickscript` (lib) due to 1 previous error
